# Bulletin

./: .gitignore  README.md  pyproject.toml
src/bulletin/: __init__.py  bulletin.py  email_server.py  helpers.py  individual_rss.py  section.py
src/bulletin/templates/: base.html  individual_rss.html
tests/: conftest.py  test_bulletin.py  test_email_server.py  test_helpers.py  test_section.py
tests/data/: test_individual_rss.txt
tests/expected/: bulletin_render_default.txt  get_template_helper_bulletin_template.txt  get_template_helper_bulletin_template_folder.txt  individual_rss_process.json  individual_rss_render_default.txt  section_render_template.txt  section_render_template_folder.txt
tests/templates/: base.html  section.html
tests/templates_2/: base.html  section.html
